--- a/AspNetPractice/Views/Products/Upsert.cshtml
+++ b/AspNetPractice/Views/Products/Upsert.cshtml
@@ -12,7 +12,7 @@
     <div class="offset-lg-3 col-lg-6">
         <form method="POST" role="form">
             <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
+            <div class="mb-2">
                 <label asp-for="Product.Name" class="control-label"></label>
                 <div class="">
                     <input asp-for="Product.Name" class="form-control" />
@@ -20,7 +20,7 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="mb-2">
                 <label asp-for="Product.Description" class="control-label"></label>
                 <div class="">
                     <input asp-for="Product.Description" class="form-control" />
@@ -28,7 +28,7 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="mb-2">
                 <label asp-for="Product.Price" class="control-label"></label>
                 <div class="">
                     <input asp-for="Product.Price" class="form-control" />
@@ -36,15 +36,18 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="mb-2">
                 <label asp-for="Product.CategoryId" class="control-label"></label>
                 <div>
-                    <select asp-for="Product.CategoryId" asp-items="selectItems"></select>
+                    <select 
+                        class="form-select"
+                        asp-for="Product.CategoryId" 
+                        asp-items="selectItems"></select>
                     <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
                 </div>
             </div>
 
-            <input type="submit" value="Submit" />
+            <input class="btn btn-primary mt-3" type="submit" value="Submit" />
         </form>
     </div>
 </div>
